<resources>
    <string name="app_name">Keep Track</string>
    <string name="corrida">Corrida</string>
    <string name="bike">Bike</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descricao_imagem_de_corrida">Imagem de corrida</string>
    <string name="five_km_heading">5km</string>
    <string name="ten_km_heading">10km</string>
    <string name="half_marathon_heading">Meia maratona</string>
    <string name="marathon_heading">Maratona</string>
    <string name="descricao_imagem_de_bike">Imagem de Bike</string>
    <string name="longest_ride_heading">Corrida mais longa</string>
    <string name="biggest_climb_heading">Maior altitude</string>
    <string name="best_speed_heading">Melhor velocidade média</string>
</resources>